1.34/03-gatewayAPI/02-gateway-class.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  # parametersRef:
  #   group: gateway.envoyproxy.io
  #   kind: EnvoyProxy
  #   name: main
  #   namespace: envoy-gateway-system
